# froide-evidencecollection

./: .gitignore  MANIFEST.in  Makefile  README.md  compose-dev.yaml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  translations.yml
froide_evidencecollection/: abgeordnetenwatch.py  admin.py  apps.py  cms_apps.py  cms_plugins.py  documents.py  enricher.py  exporter.py  filterset.py  importer.py  json_importer.py  models.py  regions.py  relation_seeding.py  settings.py  sqlite_importer.py  storage.py  tasks.py  urls.py  utils.py  views.py  wikidata.py
froide_evidencecollection/data/: org_label_replacements.csv  org_name_overrides.csv  org_type_levels.csv  person_name_overrides.csv  political_position_overrides.csv
froide_evidencecollection/migrations/: 0001_initial.py  0002_evidence_title_alter_evidence_area_and_more.py  0003_alter_evidence_source.py  0004_affiliation_attributionbasis_distributionchannel_and_more.py  0004_affiliation_function_alter_institution_name_and_more.py  0005_remove_person_georegion_and_more.py  0006_rename_evidencenew_evidence_rename_sourcenew_source.py  0007_alter_evidence_options.py  0008_rename_fdgofeature_evidencecategory_and_more.py  0009_alter_attachment_file.py  0010_actor_attributionproblem_collection_and_more.py  0011_remove_personororganization_affiliations_and_more.py  0012_rename_affiliationnew_affiliation_and_more.py  0013_parliament.py  0013_remove_organization_actor_ptr_and_more.py  0014_delete_actor.py  0014_parliamentperiod.py  0015_actor_importexportrun_role_attachment_created_at_and_more.py  0015_actor_role_alter_evidence_reference_url_and_more.py  0016_affiliation_is_synced_organization_is_synced_and_more.py  0017_alter_affiliation_sync_uuid_and_more.py  0018_affiliation_last_synced_state_and_more.py  0019_alter_affiliation_end_date_string_and_more.py  0020_alter_importexportrun_source_and_more.py  0021_alter_importexportrun_source_and_more.py  0022_remove_legislativeperiod_reference_url_and_more.py  0023_organization_name_hash_person_name_hash.py  0023_remove_affiliation_is_synced_and_more.py  0024_category_chapter_keyword_keywordgroup_topic_and_more.py  0024_populate_name_hash.py  0024_remove_actor_external_id_remove_actor_name_and_more.py  0025_alter_postimage_file_alter_postscreenshot_file_and_more.py  0025_remove_videoexcerpt_video_remove_evidence_citation_and_more.py  0025_socialmediaaccount_evidence_posted_by_and_more.py  (+39 more)
scripts/: apply_image_reviews.py  export_image_reviews.py  image_reviews_common.py  import_image_reviews.py  json_diff.py  json_to_csv.py  prepare_import.py
(+68 files in other folders)
