[project]
name = "froide-evidencecollection"
version = "0.0.1"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
gsheets = [
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
]
